# spazzino_control

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: drive_bot.rviz  joystick.yaml  mapper_params_online_async.yaml  nav2_params.yaml  twist_mux.yaml
launch/: robot.launch.py
model/: robot.urdf  robot.xacro
odom_cmd_vel/: odom_cmd_vel.ino
odom_cmd_vel_esp32/: odom_cmd_vel_esp32.ino
spazzino_control/: arduino_bridge.py  esp_bridge.py
